# byte-deep-learning-24-catdogs

./: hw.ipynb  pyproject.toml
src/: dataset.py  modeling.py
